@@ -1,3 +1,8 @@
+2010-10-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-invoke): call `mm-destroy-part' on the HTTP
+	response to avoid leaking temporary buffers.
+
 2010-10-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-l2fq): new function
